--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "resume-michal-kukla",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "normalize-url": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^2.0.1",
-    "yarn-upgrade-all": "^0.5.4"
+    "normalize-url": "^7.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.6",
+    "yarn-upgrade-all": "^0.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   }
 }
