--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   }
